--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#topic1">Highlight #1</a>
+                        <a href="#topic1">Version Control</a>
                     </li>
                     <li>
-                        <a href="#topic2">Hightlight #2</a>
+                        <a href="#topic2">Version Control Systems</a>
                     </li>
                     <li>
-                        <a href="#topic3">Hightlight #3</a>
+                        <a href="#topic3">Local Version Control Systems</a>
                     </li>
                     <li>
-                        <a href="#topic4">Hightlight #4</a>
+                        <a href="#topic4">Centralized Version Control Systems </a>
                     </li>
                     <li>
-                        <a href="#topic5">Hightlight #5</a>
+                        <a href="#topic5">Git/GitHub</a>
                     </li>
                 </ul>
             </div>
@@ -67,7 +67,7 @@
         <div class="headline">
             <div class="container">
                 <h2>Lesson 3 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>Elie Emile</h3>
             </div>
         </div>
     </header>
@@ -81,9 +81,9 @@
         <div class="featurette" id="topic1">
             <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">Version Control (VC)</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Version control is defined as the process by which a system maintains changes of files or groups of files so that older version can be recalled if needed. In many professional settings there will be instances where there will be more than one person working on the same file simultaneously, it is extremely important that these files don't end up mashed into a single folder. This can bring about a lot of confusion and may delay the progress of certain projects. I believe version control is important because it brings order to a field where a lot of things can get lost or misplaced because there can be so much going on all at once.     </p>
         </div>
 
         <hr class="featurette-divider">
@@ -92,9 +92,9 @@
         <div class="featurette" id="topic2">
             <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">Version COntrol Systems (VCS)</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Version control systems is an effective tool that allows you to revert back to previous or original versions of  a file and to keep track of who made changes. Often times when a file contains a massive amount of code tha isn't functioning the way it should, it can be gruesome to have to go back and try and find what sometimes can be a minor mistake. Having the ability to go back to older versions of a file when mistakes are made allowsfor them to be corrected quickly and with way less of a hassle in having to find it.  </p>
         </div>
 
         <hr class="featurette-divider">
@@ -103,9 +103,9 @@
         <div class="featurette" id="topic3">
             <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">Local Version Conrtrol Systems</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead"> Local VCS is the common choice in how people choose to manage files in their workspace. The method is simply done by copying the files into the directory they want it to go to. Though this may seem so simple, it can bring about many problems. You could quickly forget which directory you were working in or overwrite files that you didn't mean to make changes to. Mess ups like these were the reason local VSC was made, in order to monitor and record changes when made.  </p>
         </div>
         
         <hr class="featurette-divider">
@@ -114,9 +114,9 @@
         <div class="featurette" id="topic4">
             <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
             <h2 class="featurette-heading">Highlight #4
-                <span class="text-muted">Topic 4 Header</span>
+                <span class="text-muted">Centralized Version Control Systems</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Another common problem that users tend to come into when working on files is when collaborating with others. To combat this, centralized VCS was created. It works on a single server system that saves all the versions of the file that is being worked on, also it keeps track of how many people have made changes to the file. As with anything that serves as solution it also comes with a downside, the main one being the single server where these files would be stored. If the server were to go down for any amount of time, the users would not be able to access the files they're working on. If the central database on which the server operates becomes corrupted or necessary back-ups aren't made as needed this can cost hours of work to go missing or must be redone.     </p>
         </div>
 
         <hr class="featurette-divider">
@@ -125,9 +125,9 @@
         <div class="featurette" id="topic5">
             <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
             <h2 class="featurette-heading">Highlight #5
-                <span class="text-muted">Topic 5 Header</span>
+                <span class="text-muted">Git/Github</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git is what would be considered as a distributed version control system where users cannot only enter the repository and its contents but also reflect the changes they make on that project. For example, if multiple people ae working a file the changes they make can be seen as they are making them. This bypasses a lot of the mistakes that can be made when picking up where someone left off on a file. Git does not need to retrieve its data from the server every time data is called, it can retrieve it locally from where it is stored. There are four basic commands for moving files to the GitHub repository are $ git add, $ git commit, $ git push, $ git init.  </p>
         </div>
 
         <hr class="featurette-divider">
