--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="topic1">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">Highlight #1
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://idoc.co.in/application/public/assets/6/images/version-control.png">
+            <h2 class="featurette-heading">Topic 1:
                 <span class="text-muted">Version Control (VC)</span>
             </h2>
             <p class="lead">Version control is defined as the process by which a system maintains changes of files or groups of files so that older version can be recalled if needed. In many professional settings there will be instances where there will be more than one person working on the same file simultaneously, it is extremely important that these files don't end up mashed into a single folder. This can bring about a lot of confusion and may delay the progress of certain projects. I believe version control is important because it brings order to a field where a lot of things can get lost or misplaced because there can be so much going on all at once.     </p>
@@ -90,8 +90,8 @@
 
         <!-- Second Featurette -->
         <div class="featurette" id="topic2">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">Highlight #2
+            <img class="featurette-image img-circle img-responsive pull-left" src="http://3.bp.blogspot.com/-3Idqniq-awU/Tk68e0PBJ2I/AAAAAAAABgY/vfP2wCR6R8A/s1600/VC.jpg">
+            <h2 class="featurette-heading">Topic 2:
                 <span class="text-muted">Version COntrol Systems (VCS)</span>
             </h2>
             <p class="lead">Version control systems is an effective tool that allows you to revert back to previous or original versions of  a file and to keep track of who made changes. Often times when a file contains a massive amount of code tha isn't functioning the way it should, it can be gruesome to have to go back and try and find what sometimes can be a minor mistake. Having the ability to go back to older versions of a file when mistakes are made allowsfor them to be corrected quickly and with way less of a hassle in having to find it.  </p>
@@ -101,8 +101,8 @@
 
         <!-- Third Featurette -->
         <div class="featurette" id="topic3">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">Highlight #3
+            <img class="featurette-image img-circle img-responsive pull-right" src="https://git-scm.com/book/en/v2/images/local.png">
+            <h2 class="featurette-heading">Tpoic 3:
                 <span class="text-muted">Local Version Conrtrol Systems</span>
             </h2>
             <p class="lead"> Local VCS is the common choice in how people choose to manage files in their workspace. The method is simply done by copying the files into the directory they want it to go to. Though this may seem so simple, it can bring about many problems. You could quickly forget which directory you were working in or overwrite files that you didn't mean to make changes to. Mess ups like these were the reason local VSC was made, in order to monitor and record changes when made.  </p>
@@ -112,8 +112,8 @@
         
        <!-- Fourth Featurette -->
         <div class="featurette" id="topic4">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">Highlight #4
+            <img class="featurette-image img-circle img-responsive pull-left" src="https://homes.cs.washington.edu/~mernst/advice/version-control-fig2.png">
+            <h2 class="featurette-heading">Topic 4:
                 <span class="text-muted">Centralized Version Control Systems</span>
             </h2>
             <p class="lead">Another common problem that users tend to come into when working on files is when collaborating with others. To combat this, centralized VCS was created. It works on a single server system that saves all the versions of the file that is being worked on, also it keeps track of how many people have made changes to the file. As with anything that serves as solution it also comes with a downside, the main one being the single server where these files would be stored. If the server were to go down for any amount of time, the users would not be able to access the files they're working on. If the central database on which the server operates becomes corrupted or necessary back-ups aren't made as needed this can cost hours of work to go missing or must be redone.     </p>
@@ -123,8 +123,8 @@
 
         <!-- Fifth Featurette -->
         <div class="featurette" id="topic5">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">Highlight #5
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://valuebound.com/sites/default/files/2015-12/Beginners_guide_setting_up-git.jpg">
+            <h2 class="featurette-heading">Topic 5:
                 <span class="text-muted">Git/Github</span>
             </h2>
             <p class="lead">Git is what would be considered as a distributed version control system where users cannot only enter the repository and its contents but also reflect the changes they make on that project. For example, if multiple people ae working a file the changes they make can be seen as they are making them. This bypasses a lot of the mistakes that can be made when picking up where someone left off on a file. Git does not need to retrieve its data from the server every time data is called, it can retrieve it locally from where it is stored. There are four basic commands for moving files to the GitHub repository are $ git add, $ git commit, $ git push, $ git init.  </p>
